Fix: sidebar on mobile screen

--- a/styles.css
+++ b/styles.css
@@ -1281,6 +1281,10 @@
       width: 100%;
       margin: 0;
     }
+
+    .sidebar-nav, .sidebar-heading, .search-translate, .newsletter-suscribe {
+      padding: 10%;
+    }
   }
   
   @media screen and (max-width: 375px) {
